5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1643_1053.log
== TEST (2019-04-08 18:52:35) 
-- CODE:
feitico = input("nome do patrono:")

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:02:13) 
-- CODE:
feitico = input("nome do patrono:")
if(feitico)

-- ERROR:
File "XXXX", line 2
    if(feitico)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:03:03) 
-- CODE:
feitico = input("nome do patrono:")
if(feitico<=)

-- ERROR:
File "XXXX", line 2
    if(feitico<=)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:33:02) 
-- CODE:
feitico = input("nome do patrono:")
if(feitico)

-- ERROR:
File "XXXX", line 2
    if(feitico)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:34:28) 
-- CODE:
feitico = input("nome do patrono:")


-- ERROR:
File "XXXX", line 2
    if(feitico)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:45:38) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono + nao eh patrono do harry):
	feitico = asno nao eh patrono do harry
else:
	feitico = asno eh patrono do harry
print(feitico)
 


-- ERROR:
File "XXXX", line 2
    if(patrono + nao eh patrono do harry):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:46:16) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono + nao eh patrono do harry):
	feitico = "asno nao eh patrono do harry"
else:
	feitico = "asno eh patrono do harry"
print(feitico)
 


-- ERROR:
File "XXXX", line 2
    if(patrono + nao eh patrono do harry):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:47:07) 
-- CODE:
patrono = input("nome do patrono:")

 


-- ERROR:
File "XXXX", line 2
    if(patrono + nao eh patrono do harry):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:02:47) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono)
 


-- ERROR:
File "XXXX", line 2
    if(patrono)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:07:28) 
-- CODE:
patrono = input("nome do patrono:")
if():
	feitico = patrono + "nao eh patrono do Harry Potter"

 


-- ERROR:
File "XXXX", line 2
    if(patrono)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:10) 
-- CODE:
patrono = input("nome do patrono:")
if():
	feitico = patrono + "nao eh patrono do Harry Potter"
else:
	feitico = patrono + "eh patrono do Harry Potter"
print(feitico)
		

 


-- OUTPUT:
cervoeh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:09:34) 
-- CODE:
patrono = input("nome do patrono:")
if():
	feitico = patrono + " nao eh patrono do Harry Potter"
else:
	feitico = patrono + " eh patrono do Harry Potter"
print(feitico)
		

 


-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:10:05) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono==patrono):
	feitico = patrono + " nao eh patrono do Harry Potter"
else:
	feitico = patrono + " eh patrono do Harry Potter"
print(feitico)
		

 


-- OUTPUT:
cervo nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:10:16) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono==patrono):
	feitico = patrono + " nao eh patrono do Harry Potter"
else:
	feitico = patrono + " eh patrono do Harry Potter"
print(feitico)
		

 


-- EXECUTION TIME:
0.138108
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:11:44) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono==patrono):


 


-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:11:56) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono==patrono):
-- ERROR:
File "XXXX", line 3
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:12:36) 
-- CODE:
patrono = input("nome do patrono:")
if:
-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:15:06) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono=="cervo"):
	feitico = patrono + " nao eh patrono do Harry Potter"
else:
	feitico = patrono + " eh patrono do Harry Potter"
print(feitico)
		
-- EXECUTION TIME:
0.130078
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:15:10) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono=="cervo"):
	feitico = patrono + " nao eh patrono do Harry Potter"
else:
	feitico = patrono + " eh patrono do Harry Potter"
print(feitico)
		
-- EXECUTION TIME:
0.153553
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:15:55) 
-- CODE:
patrono = input("nome do patrono:")
if(patrono=="cervo"):
	feitico = patrono + " eh patrono do Harry Potter"
else:
	feitico = patrono + " nao eh patrono do Harry Potter"
print(feitico)
		
-- EXECUTION TIME:
0.187489
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
